k8s/api-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mvet-songbook
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mvet-api
  namespace: mvet-songbook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mvet-api
  template:
    metadata:
      labels:
        app: mvet-api
    spec:
      containers:
      - name: api-server
        image: mvet-songbook-api:latest # We'll build the container locally on local context
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
        resources:
          limits:
            memory: 256Mi
            cpu: 300m
          requests:
            memory: 64Mi
            cpu: 50m
        volumeMounts:
        - name: songs-storage
          mountPath: /app/data
      volumes:
      - name: songs-storage
        hostPath:
          path: /var/data/mvet-songbook
          type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: mvet-api-svc
  namespace: mvet-songbook
spec:
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: mvet-api
