k8s/ingress-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mvet-api-ingress-prod
  namespace: mvet-songbook
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: mvet-api.cminfosec.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mvet-api-svc
            port:
              number: 80
  tls:
  - hosts:
    - mvet-api.cminfosec.com
    secretName: mvet-api-tls-prod
